src/scss/styles.scss
/* You can add global styles to this file, and also import other style files */
@import "./src/scss/mixins";

:root {
  background-color: #fbfaf9;
  font-size: 62.5%;
}

* {
  box-sizing: border-box;
  font-family: Avenir, sans-serif;
  margin: 0;
  padding: 0;
  color: #333;
  text-align: center;
}

.header {
  width: 100vw;
  display: flex;
  justify-content: space-between;
  align-items: center;
  max-width: 80rem;
  margin: 0 auto;
  padding: 1rem;

  @include to-xs {
    padding: 2rem;
  }

  img {
    width: 30px;
    height: 22px;
  }

  .logo-title {
    font-size: 1.2em;
  }


  .backbutton {
    display: flex;
    justify-content: space-around;
    font-size: 1.5rem;
    padding: 0.5rem 4rem;
    margin: 0 auto;
    width: 24rem;
    text-align: center;
    border: 0.1rem solid rgba(0, 0, 0, 0.1);
    text-decoration: none;
    color: #333;
    background-color: white;
    border-radius: 10px;
  }

  .backbutton:hover {
    cursor: pointer;
    background-color: #f5f5f5;
  }

}

h1 {
  font-size: 5.4rem;
  text-align: center;
}

h1 > span {
  font-size: 2.4rem;
  font-weight: 500;
}

h2 {
  font-size: 4.2rem;
  font-weight: 700;
  text-align: center;

  @include to-xs {
    margin-bottom: 2rem;
  }
}

h3 {
  font-size: 2.8rem;
  font-weight: 500;

  @include to-xs {
    font-size: 2.3rem;
    margin: 0 10px;
  }
}

/* UTILITIES */

.container__header {
  width: 100vw;
  display: flex;
  justify-content: space-between;
  align-items: center;
  max-width: 80rem;
  margin: 0 auto;
  padding: 0 1.5rem;

  @include from-xs {
     margin-top: 2rem;
     padding: 0 1.5rem;
  }

  a {
    width: 120px;
    position: relative;
    margin: 0 auto;
    margin-bottom: 2rem;

    @include to-xs {
      margin-bottom: 2rem;
    }
  }

  #hud {
    width: 260px;

    position: relative;
    justify-content: space-between;

    @include to-xs {
      justify-content: space-evenly;
      width: 100%;
    }
  }

  @include to-xs {
    display: inline-flex;
    flex-wrap: wrap;
  }
}

.container__content {
  width: 100vw;
  display: flex;
  align-items: center;
  max-width: 80rem;
  margin: 0 auto;
  padding: 0 1.5rem 3rem;
}

/* any child of the container */
.container__content > * {
  width: 100%;
}

.flex-column {
  display: flex;
  flex-direction: column;
}

.flex-center {
  justify-content: center;
  align-items: center;
}

.menu {
  width: 400px;

  @include to-xs {
    width: 100%;
  }
}

.justify-center {
  justify-content: center;
}

.text-center {
  text-align: center;
}

.hidden {
  display: none;
}

/* BUTTONS */

.btn {
  font-size: 1.8rem;
  padding: 0.7rem 1.0rem;
  width: 15rem;
  text-align: center;
  border: 0.1rem solid rgba(0, 0, 0, 0.1);
  margin-bottom: 1rem;
  text-decoration: none;
  color: white;
  background-color: #56a5eb;
  border-radius: 10px;
}

.btn:hover {
  cursor: pointer;
  background-color: #56afff;
  //transform: translateY(-0.1rem);
  //transition: transform 150ms;
}

.btn[disabled]:hover {
  cursor: not-allowed;
  box-shadow: none;
  transform: none;
}

/* HUD */

#hud {
  display: flex;
  justify-content: space-between;
}

.hud-prefix {
  text-align: center;
  font-size: 2rem;
  color: white;
  background-color: #56a5eb;
  padding: 0.7rem;
  width: 120px;
  border-radius: 10px 10px 0 0;
  border-left: 0.1rem solid rgba(0, 0, 0, 0.1);
  border-top: 0.1rem solid rgba(0, 0, 0, 0.1);
  border-right: 0.1rem solid rgba(0, 0, 0, 0.1);
}

.hud-main-text {
  text-align: center;
  font-size: 2.5rem;
  background-color: white;
  padding: 1.9rem 0.5rem;
  width: 120px;
  border-radius: 0 0 10px 10px;
  border-left: 0.1rem solid rgba(0, 0, 0, 0.1);
  border-bottom: 0.1rem solid rgba(0, 0, 0, 0.1);
  border-right: 0.1rem solid rgba(0, 0, 0, 0.1);
}

#hud-item {
  vertical-align: middle;
}

